# space-explorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  space_explorer.cbp
sources/: farbeyond.cpp  glsl.cpp  lights.c  space-explorer.cpp
sources/data/: importdb.cpp  importdb.h  objects.cpp  objects.h  planet.cpp  planet.h  spectrum.cpp  spectrum.h
sources/gameplay/: events.cpp  events.h  joystick.cpp  keyboard.cpp  mouse.cpp  observer.cpp  observer.h
sources/gui/: display.cpp  window.cpp
sources/include/: gameplay.h  glsl.h  gui.h  lights.h  main.h  music.h  quaternions.h  utils.h
sources/include/data/: planet.h
sources/shaders/: sunlight.frag  sunlight.vert
sources/sounds/: music.cpp
sources/textures/: loadpng.c  loadpng.cpp  loadpng.h  loadtiff.cpp  loadtiff.h
sources/utils/: glsl.cpp  quaternions.cpp  utils.cpp
